restored AjaxDatePicker to upstream